--- a/ClassNotesSpring25/kattis/sith/sith.yaml
+++ b/ClassNotesSpring25/kattis/sith/sith.yaml
@@ -1,7 +1,7 @@
 accepted: 1
 cpu_limit: 1 second
-difficulty: 1.2 Easy
+difficulty: 1.5 Easy
 mem_limit: 1024 MB
-problemid: twostones
+problemid: sith
 submissions: 1
-title: Take Two Stones
+title: Sith
